--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <h1>YOU GOT MUMPS!</h1>
             <a class="retry" href="#">Go back in time and retry</a>
           </div>
+          <div id="sound" class="on" style="display: none;"></div>
         </div>
       </div>
     </div>
